--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Android_SF10</string>
+    <string name="app_name">Straight from 10</string>
+    <string name="please_wait">Please wait</string>
+    <string name="please_click_again_to_exit">Please click back again to exit.</string>
+    <string name="app_description">Play straight from 10 with your friends or complete strangers by joining private/public game sessions!</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="sign_in">SIGN IN</string>
 </resources>
